--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "^2.0.0-rc.2",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "node-sass-middleware": "^0.9.7"
+    "node-sass-middleware": "^0.9.7",
+    "socket.io": "^1.4.5"
   }
 }
