--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "socket.io": "^1.4.5"
   },
   "engines": {
-    "node": "4.4.1"
+    "node": "4.4.1",
+    "npm": "^2.14.20" 
   },
   "repository": {
     "type": "git",
