--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "node-sass-middleware": "^0.9.7",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "underscore": "^1.8.3"
   },
   "engines": {
     "node": "4.4.1",
-    "npm": "^2.14.20" 
+    "npm": "^2.14.20"
   },
   "repository": {
     "type": "git",
